Create a footer and add Powered by Yandex.Translate to it

--- a/frontend/src/template.html
+++ b/frontend/src/template.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>React App</title>
+  <title>Immersion</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
   <div class="container">
     <div id="app">Loading...</div>
   </div>
+	<footer>
+		Powered by <a href="http://api.yandex.com/dictionary">Yandex.Translate</a>
+	</footer>
 </body>
 </html>
